# SDL_net

./: CMakeLists.txt
cmake/template/: Config.cmake.in
